--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-app</title>
+    <title>Notyqo - Rich Text Notes</title>
+    <meta name="description" content="Dual-space note-taking with PlateJS rich text editor" />
   </head>
   <body>
     <div id="root"></div>
